# advent-of-code

./: .gitignore  2015  2018  Gemfile  LICENSE  README.txt  cleanup.sh
2018/: Cargo.toml  main.rs
2018/day-01-chronal-calibration/: Cargo.toml
2018/day-01-chronal-calibration/src/: main.rs
2018/day-02-inventory-management-system/: Cargo.toml
2018/day-02-inventory-management-system/src/: main.rs
2018/day-03-no-matter-how-you-slice-it/: Cargo.toml
2018/day-03-no-matter-how-you-slice-it/src/: main.rs
2018/day-04-repose-record/: Cargo.toml
2018/day-04-repose-record/src/: main.rs
2018/day-05-alchemical-reduction/: Cargo.toml
2018/day-05-alchemical-reduction/src/: main.rs
2018/day-06-chronal-coordinates/: Cargo.toml
2018/day-06-chronal-coordinates/src/: grid.rs  main.rs  part1.rs  part2.rs
2018/day-07-the-sum-of-its-parts/src/: main.rs
2018/src/: lib.rs  main.rs
2018/src/day_01_chronal_calibration/: mod.rs
2018/src/day_02_inventory_management_system/: mod.rs
2018/src/day_03_no_matter_how_you_slice_it/: mod.rs
2018/src/day_04_repose_record/: mod.rs
2018/src/day_06_chronal_coordinates/: mod.rs
2018/src/day_07_the_sum_of_its_parts/: mod.rs
2018/src/day_08_memory_maneuver/: mod.rs
2018/src/day_09_marble_mania/: mod.rs
2018/src/day_10_the_stars_align/: mod.rs
2018/src/day_11_chronal_charge/: mod.rs
2018/src/day_12_subterranean_sustainability/: mod.rs
2018/src/day_13_mine_cart_madness/: mod.rs
2018/src/file/: mod.rs
2018/src/math/: mod.rs
2018/src/spatial/: mod.rs
2018/template/: Cargo.toml
2018/template/src/: main.rs
(+434 files in other folders)
